--- a/src/components/about/style.css
+++ b/src/components/about/style.css
@@ -11,6 +11,7 @@
   margin-top: -30px;
   margin-right: -150px;
   transform: scaleX(-1);
+  pointer-events: none;
 }
 .about_text {
   margin-top: 170px;
