--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -59,6 +59,7 @@
   height: 100vh;
   background: transparent;
   pointer-events: none;
+  z-index: 18;
 }
 .menu_hover.open {
   pointer-events: all;
@@ -104,6 +105,7 @@
     border-top-left-radius: 30px;
     border-bottom-left-radius: 30px;
     overflow: hidden;
+    z-index: 20;
   }
   .menu_container.open {
     transform: translateX(0%);
