--- a/src/components/about/style.css
+++ b/src/components/about/style.css
@@ -1,9 +1,9 @@
 .about {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin: 0 15%;
-  margin-top: 30px;
-  padding: 40px 0;
+  height: 900px;
 }
 .about_img2 {
   height: 700px;
@@ -14,13 +14,12 @@
   pointer-events: none;
 }
 .about_text {
-  margin-top: 170px;
   text-align: start;
   max-width: 40%;
 }
 .about_text_head {
   font-size: 52px;
-  font-weight: bold;
+  font-weight: 600;
 }
 .about_text_title {
   margin-top: 10px;
@@ -104,7 +103,7 @@
   }
   .about_text_head {
     font-size: 58px;
-    font-weight: bold;
+    font-weight: 600;
   }
   .about_text_title {
     font-size: 18px;
