--- a/src/components/contact/style.css
+++ b/src/components/contact/style.css
@@ -1,12 +1,14 @@
 .contact {
-  padding: 100px 0;
   width: 70%;
   margin: 0 auto;
   display: flex;
+  align-items: center;
+  height: 900px;
 }
 .contact_head {
   width: 40%;
   text-align: start;
+  height: 400px;
 }
 .contact_head_t {
   font-size: 36px;
@@ -25,13 +27,31 @@
 }
 .contact_info {
   height: 400px;
-  background-color: black;
   border-radius: 30px;
   width: 60%;
   display: flex;
   justify-content: center;
   align-items: center;
   border: 1px #414141 solid;
+  position: relative;
+  overflow: hidden;
+}
+
+video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  height: 150%;
+
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  opacity: calc(0.7);
+}
+
+.contact_box {
+  position: relative;
+  z-index: 1;
 }
 .cont_mas {
   font-size: 32px;
@@ -49,7 +69,29 @@
   color: #fce4a6;
   cursor: pointer;
 }
+.icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 12px;
+}
+.contact_icon {
+  display: flex;
+  align-items: center;
+}
+@media (min-width: 2200px) {
+  video {
+    height: 200%;
+  }
+}
+@media (min-width: 3500px) {
+  video {
+    height: 300%;
+  }
+}
 @media (max-width: 1200px) {
+  video {
+    height: 100%;
+  }
   .contact_head_t {
     font-size: 32px;
   }
@@ -61,6 +103,9 @@
   }
   .contact_head_title {
     font-size: 14px;
+  }
+  .contact_head {
+    height: 300px;
   }
   .contact_info {
     height: 300px;
@@ -74,6 +119,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+  }
+  video {
+    height: 130%;
   }
   .contact_head {
     width: 100%;
@@ -94,6 +142,9 @@
     width: 80%;
     margin: 15px auto;
   }
+  .contact_head {
+    height: auto;
+  }
   .contact_info {
     height: 400px;
     width: 80%;
@@ -106,6 +157,19 @@
   }
 }
 @media (max-width: 600px) {
+  .icon {
+    width: 18px;
+    height: 18px;
+  }
+  .contact_icon {
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  video {
+    height: 100%;
+  }
   .contact_info {
     justify-content: center;
     align-items: start;
