--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -8,7 +8,7 @@
 .logo {
   display: flex;
   align-items: center;
-  font-weight: bold;
+  font-weight: 600;
   font-size: 21px;
   height: 40px;
 }
