--- a/src/components/rates/style.css
+++ b/src/components/rates/style.css
@@ -1,9 +1,13 @@
 .rates {
-  padding: 150px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 900px;
 }
 .rates_head {
   font-size: 36px;
-  font-weight: bold;
+  font-weight: 600;
 }
 .rates_table {
   display: flex;
